--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
-numpy==1.15.4
-opencv==3.4.2
-torch==1.0.0
-torchvision==0.2.1
+defusedxml==0.5.0
+ipython-genutils==0.2.0
 matplotlib==3.0.2
+mkl-random==1.0.1
+msgpack-numpy==0.4.3.2
+nose==1.3.7
+numpy==1.16.0
+pandas==0.24.0
+pickleshare==0.7.5
+Pillow==5.4.1
+pycosat==0.6.3
+tensorflow==1.11.0
+tensorflow-gpu==1.12.0
+torch==1.0.0
+torchfile==0.1.0
+torchvision==0.2.1
+tqdm==4.29.1
